# KPIs-project-2023

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  scrap.py
CalculoPBI_120/: 1 Cálculo Agropecuario B 2007 r.xlsx  10 Cálculo Telecom y Otros Serv Info B 2007 r.xlsx  11 Cálculo Financiero B 2007 r.xls  12 Cálculo Servicios Prestados a Empresas B 2007 r.xls  13 Cálculo Servicios Gubernamentales B 2007 r.xls  2 Cálculo Pesca B 2007 r.xls  3 Cálculo Minería e Hidrocarburos B 2007 r.xlsx  4 Cálculo Manufactura B 2007 r.xlsx  5 Cálculo Electricidad Gas y Agua r.xls  6 Cálculo Construcción B 2007 r.xlsx  7 Cálculo Comercio B 2007 r.xls  8 Cálculo Transporte y almacenamiento B 2007 r.xlsx  9 Cálculo Alojamiento y Restaurantes Base 2007 r.xls  Indicador Mensual de la Producción Nacional 05 2023 r.xlsx  VA-PBI 05 2023 B 2007 r.xlsx
KPIs/: app.py
