[tool.poetry]
name = "betty"
version = "0.1.0"
description = "KPIs Betty project"
authors = ["Eduardo Melendez <edgame127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
coloredlogs = "^15.0.1"
pdfquery = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
