[tool.poetry]
name = "betty"
version = "0.1.0"
description = "KPIs Betty project"
authors = ["Eduardo Melendez <edgame127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
coloredlogs = "^15.0.1"
pdfquery = "^0.4.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"
safety = "^2.3.5"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
